src/test/deca/context/invalid/personalTests/instanceofFloat2.deca
class A{
    int a;
}

{
    float a = 10;
    A b = new A();
    if(b instanceof a){
        println("true");
    }
    else{
        println("false");
    }
}